Fixing HTML and CSS readability for main content

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,19 +14,21 @@ svg {
 }
 
 body {
-  background-color: #393e41;
-  height: 100vh;
   display: grid;
   grid-template-columns: 0.9fr 4fr;
   grid-template-rows: 0.1fr 0.3fr 1fr;
   overflow: hidden;
+
+  height: 100vh;
+  background-color: #393e41;
 }
 
 header {
-  background-color: #307e7e;
   grid-column: 1 / -1;
   display: flex;
   align-items: center;
+
+  background-color: #307e7e;
   padding-left: 1.5rem;
   font-size: 1.5rem;
   font-weight: 600;
@@ -86,35 +88,50 @@ header {
   background-color: rgba(107, 114, 119, 1);
 }
 
-/****************** TASKS/CONTENT SECTION ******************/
-#content {
+.main-content {
   grid-column: 2;
   grid-row: 2 / 4;
 }
 
-.container {
+.view {
   width: auto;
   height: 100%;
   padding: 3rem 10rem;
 }
 
-.heading .title {
+.view-header {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  background-color: transparent;
+  padding: 0;
+}
+
+.view-title {
+  margin: 0;
+  line-height: 1.2;
   font-size: 2rem;
   font-weight: 600;
 }
 
-.heading .numTasks {
+.view-meta {
   display: flex;
   gap: 0.5rem;
   align-items: center;
+  margin: 0;
+  font-size: 1rem;
 }
 
-.numTasks svg {
+.view-meta svg {
   fill: #acacac;
 }
 
-.numTasks span {
+.view-meta-tasks {
+  margin: 0;
+  line-height: 1;
+
   color: #acacac;
+  font-weight: 500;
 }
 
 .tasks-container {
@@ -122,10 +139,9 @@ header {
 }
 
 .task-item {
-  width: 80%;
-  padding-bottom: 0.5rem;
   display: flex;
   align-items: center;
+  width: 80%;
   padding: 0.5rem;
   border-bottom: 1px solid #acacac;
   cursor: pointer;
@@ -145,22 +161,21 @@ header {
 }
 
 .task-item-right {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
-.task-content {
+.task-text {
   display: flex;
   flex-direction: column;
   padding-left: 1rem;
-  /* margin-top: 1.25rem; */
 }
 
-.task-content .task-description {
-  font-size: 0.8rem;
+.task-description {
   color: #acacac;
+  font-size: 0.8rem;
 }
 
 .task-details {
@@ -169,15 +184,14 @@ header {
   gap: 1rem;
 }
 
-/****************** DIALOG ******************/
 dialog {
   position: absolute;
   background-color: #242729;
+  padding: 1rem;
   margin: auto;
   border: none;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
-  padding: 1rem;
 }
 
 dialog::backdrop {
@@ -185,11 +199,10 @@ dialog::backdrop {
 }
 
 .form-container {
-  width: 450px;
-  height: auto;
   display: flex;
   flex-direction: column;
-  /* gap: 0.5rem; */
+  width: 450px;
+  height: auto;
 }
 
 .form-container input {
@@ -199,22 +212,22 @@ dialog::backdrop {
   outline: none;
 }
 
-.form-container input#title {
+#form-title {
   font-size: 1.25rem;
   font-weight: 600;
 }
 
-.form-container input#description {
+#form-description {
   padding-bottom: 1rem;
 }
 
-.form-container .details {
+.form-details {
   display: flex;
   align-items: center;
   gap: 2rem;
 }
 
-.details .dropdown {
+.dropdown {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
@@ -222,110 +235,84 @@ dialog::backdrop {
   cursor: pointer;
 }
 
-.dropdown:hover #dropdown-list {
+.dropdown:hover .dropdown-list {
   opacity: 1;
   visibility: visible;
 }
 
-.details #dropdown-select {
+.dropdown-select {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #acacac;
-  border-radius: 4px;
   width: 90px;
   padding: 0.25rem;
+  border: 1px solid #acacac;
+  border-radius: 4px;
   font-size: 0.75rem;
 }
 
-.details #dropdown-list {
-  background-color: #242729;
-  border: 1px solid #4d4a4a;
-  border-radius: 4px;
-  font-size: 0.75rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.dropdown-list {
   position: absolute;
   top: 110%;
   left: 0;
   right: 0;
   opacity: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  background-color: #242729;
+  border: 1px solid #4d4a4a;
+  border-radius: 4px;
+  font-size: 0.75rem;
   visibility: hidden;
   transform: opacity 0.2s linear, visibility 0.2s linear;
 }
 
-.details .dropdown-option {
+.dropdown-option {
   width: 90px;
-  text-align: center;
   padding: 0.25rem;
+  text-align: center;
 }
 
-.details .dropdown-option:first-child:hover {
-  border-radius: 4px 4px 0px 0px;
-}
-
-.details .dropdown-option:last-child:hover {
-  border-radius: 0px 0px 4px 4px;
-}
-
-.details .dropdown-option:hover {
+.dropdown-option:hover {
   background-color: #474d50;
 }
 
-.form-container .buttons {
+.dropdown-option:first-child:hover {
+  border-radius: 4px 4px 0px 0px;
+}
+
+.dropdown-option:last-child:hover {
+  border-radius: 0px 0px 4px 4px;
+}
+
+.form-buttons {
   display: flex;
   justify-content: flex-end;
   gap: 0.5rem;
 }
 
-button.cancel {
-  padding: 0.5rem 0.75rem;
-  border: none;
-  border-radius: 4px;
+.cancel {
   background-color: rgb(175, 175, 175);
-
-  color: white;
-  cursor: pointer;
-  font-weight: 600;
-}
-
-button.add {
   padding: 0.5rem 0.75rem;
   border: none;
   border-radius: 4px;
-  background-color: #307e7e;
 
   color: white;
   font-weight: 600;
   cursor: pointer;
 }
-/* dialog {
-  margin: auto;
+
+.add {
+  background-color: #307e7e;
+  padding: 0.5rem 0.75rem;
   border: none;
-  border-radius: 8px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  transform: scale(0.75);
-  transition: 0.3s ease;
+  border-radius: 4px;
+
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
 }
-
-dialog::backdrop {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-dialog.open {
-  transition: 0.3s ease;
-  transform: scale(1);
-  opacity: 1;
-}
-
-.form-container {
-  width: 350px;
-  height: 410px;
-  padding: 2rem;
-
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-} */
